# garage

./: .pdm-python  db.sqlite3  livraria_bkp.json  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_alter_autor_email.py  0002_livro.py  0003_categoria_editora_livro_categoria_livro_editora.py  0004_livro_autores.py
garagem/models/: autor.py  categoria.py  editora.py  livro.py
garagem/serializers/: autor.py  categoria.py  editora.py  livro.py
garagem/views/: autor.py  categoria.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
